コース情報もインスタンス同士を比較するために修正